--- a/views/news.ejs
+++ b/views/news.ejs
@@ -15,10 +15,17 @@
     </div>
 
     <div class="row">
-      <% articles.forEach(article => { %>
+      <% 
+        const dummyArticles = [
+          { id: 1, title: "Climate Change and Its Effects", category: "Climate Change", author: "Jane Doe", date: "2025-04-01", excerpt: "An overview of climate change impacts in Kenya.", image: "greeninnovaton2.jpg" },
+          { id: 2, title: "Advancements in Solar Energy", category: "Renewable Energy", author: "Juma Smith", date: "2025-03-28", excerpt: "How solar power is transforming rural communities.", image: "windpower.jpg" },
+          { id: 3, title: "Wildlife Conservation Success Stories", category: "Biodiversity & Wildlife", author: "Maria Juma", date: "2025-03-25", excerpt: "Celebrating recent wins in protecting endangered species.", image: "biodiversity1.jpg" }
+        ];
+        dummyArticles.forEach(article => { 
+      %>
         <div class="col-lg-4 col-md-6 mb-4">
           <div class="card h-100 editorial-card">
-            <img src="/images/greenpower.jpg" class="card-img-top" alt="<%= article.title %>">
+            <img src="/images/<%= article.image %>" class="card-img-top" alt="<%= article.title %>">
             <div class="card-body">
               <span class="badge bg-success mb-2"><%= article.category %></span>
               <h5 class="card-title"><%= article.title %></h5>
